# invest_view

./: .gitignore  README.md  docker-compose.dev.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug.md  research.md  task.md
.opencode/skills/: git-master.md
.sisyphus/: boulder.json
.sisyphus/drafts/: 11-design-freeze-discussion-pack.raw-contract.proposed.md  12-kis-realtime-ingress-design.proposed.md  12-kis-realtime-ingress-design.reviewed-v2.md  12-kis-realtime-ingress-design.reviewed-v3.md  12-kis-realtime-ingress-design.reviewed-v4.md  12-kis-realtime-ingress-design.reviewed.md  kis-ingress-implementation.md
.sisyphus/plans/: kis-ingress-impl.md
docs/: README.md
docs/design/: 11-design-freeze-discussion-pack.md  12-kis-realtime-ingress-design.md  (+2 more)
schemas/: stock-ticks.avsc
scripts/: fake_tick_generator.py  verify_kafka_consumer.py
services/kis_ingestion/: pyproject.toml  ws_example.py
services/kis_ingestion/models/: constants.py  tick.py
services/kis_ingestion/src/kis_ingestion/: __main__.py  approval_key_manager.py  config.py  connection_manager.py  container.py  market_session.py  producer.py  raw_parser.py  service.py  subscription_pool.py  tick_parser.py  token_manager.py  ws_client.py
services/kis_ingestion/src/kis_ingestion/models/: __init__.py  orderbook.py  requests.py
services/kis_ingestion/tests/: test_approval_key_manager.py  test_config.py  test_connection_manager.py  test_market_session.py  test_producer.py  test_raw_parser.py  test_service.py  test_subscription_pool.py  test_tick_parser.py  test_token_manager.py  test_ws_client.py
(+4 files in other folders)
