[project]
name = "kis-ingestion"
version = "0.1.0"
description = "KIS Open API ingestion service"
requires-python = ">=3.11"
dependencies = [
    "pydantic",
    "httpx",
    "websockets",
    "pydantic-settings",
    "confluent-kafka",
    "fastavro",
]

[tool.uv]
dev-dependencies = [
    "pytest",
    "pytest-asyncio",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kis_ingestion"]
